Source/WebCore/platform/gtk/GtkVersioning.h
@@ -37,12 +37,14 @@ GdkPixbuf* gdk_pixbuf_get_from_surface(cairo_surface_t* surface, int srcX, int s
                                        int width, int height);
 #endif
 
-#if !GTK_CHECK_VERSION(2, 24, 0)
+#if !GTK_CHECK_VERSION(2, 23, 4)
+#define gdk_pixmap_get_size gdk_drawable_get_size
+#endif // GTK_CHECK_VERSION(2, 23, 4)
+
+#if !GTK_CHECK_VERSION(2, 23, 0)
 #define gdk_window_get_display(window) gdk_drawable_get_display(window)
-#ifdef GDK_DISABLE_DEPRECATED
 #define gdk_window_get_visual gdk_drawable_get_visual
-#endif
-#endif // GTK_CHECK_VERSION(2, 24, 0)
+#endif // GTK_CHECK_VERSION(2, 23, 0)
 
 #if !GTK_CHECK_VERSION(2, 21, 2)
 #define gdk_visual_get_depth(visual) (visual)->depth
